<resources>
    <string name="app_name">Remember Me</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="please_select_a_level">Please Select a Level</string>
    <string name="who_are_you">Who are you?</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="remember_me">Remember Me!</string>
    <string name="hi_score">High Score</string>
    <string name="user_name_pref">USER_NAME</string>
    <string name="high_score_pref">HIGH_SCORES</string>
    <string name="high_scores">High Scores</string>
    <string name="home">Home</string>
    <string name="clear_high_scores">Clear High Scores</string>
</resources>
