<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    tools:context="com.inbar.memgame.hi_score"
    >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/high_scores"
        android:id="@+id/tv_title"
        android:gravity="center"
        android:textColor="#ffffff"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <ScrollView
        android:id="@+id/sv_hi_scores"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tl_hi_scores"
            android:paddingTop="20dp"
            android:stretchColumns="*"
             >

        </TableLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:id="@+id/btn_home"
            android:onClick="returnHome"
            android:background="@drawable/defaultbutton"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_high_scores"
            android:id="@+id/btn_clear"
            android:onClick="clearHS"
            android:background="@drawable/defaultbutton"/>
    </LinearLayout>
</RelativeLayout>
